--- a/template/competition/index.ejs
+++ b/template/competition/index.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-
-	<title>competition</title>
-
-	<style>
-		body{font-size: 18px; color: #333;}
-	</style>
-</head>
+<%_head%>
 <body>
 	<header>
 		<h1>competition</h1>
