`ejs.render`を共通部分に置き、ejsファイルに送る形式を統一化

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -1,8 +1,5 @@
 <%_head%>
-<body>
-	<header>
-		<h1>インデックス</h1>
-	</header>
+<%_header%>
 
 	<main>
 		<div>
@@ -11,8 +8,4 @@
 		</div>
 	</main>
 
-	<footer>
-		<p>降ったー</p>
-	</footer>
-</body>
-</html>
+<%_footer%>
