--- a/template/common/_head.ejs
+++ b/template/common/_head.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-	<title>competition</title>
+	<title><%= data.title %></title>
 
 	<style>
 		body{font-size: 18px; color: #333;}
