--- a/template/index.ejs
+++ b/template/index.ejs
@@ -5,6 +5,9 @@
 		<h1><%= data.title %></h1>
 		<div>
 			<p>コンテンツ</p>
+			<p>
+				<a href="competition/competition/1">competitionページ</a>
+			</p>
 		</div>
 	</main>
 
