libフォルダ内のファイルの適用

--- a/template/common/_head.ejs
+++ b/template/common/_head.ejs
@@ -5,7 +5,5 @@
 
   <title><%= data.title %></title>
 
-  <style>
-    body{font-size: 18px; color: #333;}
-  </style>
+  <link rel="stylesheet" type="text/css" href="/lib/css/style.css" />
 </head>
