--- a/template/common/_footer.ejs
+++ b/template/common/_footer.ejs
@@ -1,7 +1,8 @@
-<footer>
-  <p>降ったー</p>
-</footer>
+  <footer>
+    <p>降ったー</p>
+  </footer>
 
-<script src="/lib/sample.js">//</script>
+  <script src="/lib/sample.js">//</script>
+  <script src="/lib/js/sample.js">//</script>
 </body>
 </html>
