_footerを_footと_footerに分離

--- a/template/main/index.ejs
+++ b/template/main/index.ejs
@@ -1,7 +1,14 @@
 <?- include(baseDir+'/common/_head') -?>
-    <p>index</p>
-    <p>
-      baseTempDir:<br />
-      ==> <?= baseDir ?>
+
+<?- include(baseDir+'/common/_header') -?>
+<main>
+  <div class="container">
+    <p class="big-link">
+      <a href="#">活動紹介</a>
     </p>
+    <img title="<?= server.name ?>" alt="トップ画像" src="lib.localhost:1234/top_photo.jpg" />
+  </div>
+</main>
 <?- include(baseDir+'/common/_footer') -?>
+
+<?- include(baseDir+'/common/_foot') -?>
