--- a/template/main/common/_head.ejs
+++ b/template/main/common/_head.ejs
@@ -7,6 +7,8 @@
     <? }else{ ?>
       <title><?= page.title ?> | <?= server.name ?></title>
     <? } ?>
+
+    <link rel="stylesheet" type="text/css" href="http://lib.localhost:1234/css/style.css" />
   </head>
 
   <body>
