--- a/template/main/common/_header.ejs
+++ b/template/main/common/_header.ejs
@@ -1,6 +1,8 @@
 <header>
   <div class="container">
-    <h1><?= server.name ?></h1>
+    <h1 class="site-name">
+      <a href="/"><?= server.name ?></a>
+    </h1>
     <div class="nav">
       <ul>
         <li><a href="#">部員紹介</a></li>
