--- a/template/main/index.ejs
+++ b/template/main/index.ejs
@@ -1,12 +1,12 @@
 <?- include(baseDir+'/common/_head') -?>
 
 <?- include(baseDir+'/common/_header') -?>
-<main>
+<main class="page__<?= page.id ?>">
   <div class="container">
-    <p class="big-link">
-      <a href="#">活動紹介</a>
-    </p>
-    <img title="<?= server.name ?>" alt="トップ画像" src="lib.localhost:1234/top_photo.jpg" />
+    <a href="#">
+      <p class="big-link">活動紹介</p>
+    </a>
+    <img class="top-photo" title="<?= server.name ?>" alt="トップ画像" src="https://placehold.jp/700x550.png" />
   </div>
 </main>
 <?- include(baseDir+'/common/_footer') -?>
