libフォルダのパスをejsで変数で使用可能に

--- a/template/main/common/_head.ejs
+++ b/template/main/common/_head.ejs
@@ -8,7 +8,7 @@
       <title><?= page.title ?> | <?= server.name ?></title>
     <? } ?>
 
-    <link rel="stylesheet" type="text/css" href="http://lib.localhost:1234/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="<?= lib ?>/css/style.css" />
   </head>
 
   <body>
