libフォルダに格納するファイルの拡張子の拡張

--- a/template/main/index.ejs
+++ b/template/main/index.ejs
@@ -6,7 +6,7 @@
     <a href="#">
       <p class="big-link">活動紹介</p>
     </a>
-    <img class="top-photo" title="<?= server.name ?>" alt="トップ画像" src="https://placehold.jp/700x550.png" />
+    <img class="top-photo" title="<?= server.name ?>" alt="トップ画像" src="<?= lib ?>/img/top_photo.jpg" />
   </div>
 </main>
 <?- include(baseDir+'/common/_footer') -?>
