--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -7,13 +7,15 @@ $linkBarColor__light: #f6d4d8;
 $fontColor: #27354a;
 $fontColor__light: $backColor;
 
+$headerWidth: 350px;
+
 html {
   font-size: 18px;
 }
 
 body {
   display: grid;
-  grid-template-columns: 350px auto;
+  grid-template-columns: $headerWidth auto;
   grid-template-rows: auto 1fr;
   color: $fontColor;
   background: $backColor;
@@ -21,11 +23,29 @@ body {
 }
 
 header {
+  position: fixed;
   grid-column: 1 / 2;
   grid-row: 1 / -1;
   color: $fontColor__light;
-  background: $mainColor;
+  z-index: 10;
+  // background: $mainColor;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 300%;
+    top: 0;
+    left: 0;
+    background: $mainColor;
+    transform: rotate(5deg);
+    transform-origin: right top;
+    z-index: -1;
+  }
+  &>.container {
+    width: $headerWidth;
+  }
   .site-name {
+    line-height: 3.3rem;
     text-align: center;
     &>a {
       &:hover {
@@ -45,28 +65,53 @@ header {
   }
 }
 
+footer {
+  position: relative;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  padding-top: 50px;
+  padding-left: 350px;
+  color: $fontColor__light;
+  overflow: hidden;
+  z-index: 5;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 190%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: $mainColor__heavy;
+    transform: rotate(5deg);
+    transform-origin: left top;
+    z-index: -1;
+  }
+  &>.container {
+    width: 100%;
+    max-width: none;
+    padding: 0 100px;
+  }
+  .copyright {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+}
+
 main {
   grid-column: 2 / 3;
+  grid-row: 1 / 2;
   padding: 0 10px;
   .big-link {
     color: $linkBarColor__light;
     background: $linkBarColor;
     font-size: 1.5rem;
     margin: 20px 0px;
-    padding: 1.2rem;
+    padding: 0.5rem;
     text-align: center;
   }
-  .top-photo {
-    width: 100%;
-  }
-}
 
-footer {
-  grid-column: 2 / 3;
-  color: $fontColor__light;
-  background: $mainColor__heavy;
-  .copyright {
-    text-align: center;
+  h1 {
+    color: $mainColor;
   }
 }
 
@@ -94,6 +139,9 @@ a {
     * {
       margin-top: 20px;
       margin-bottom: 20px;
+    }
+    .top-photo {
+      width: 100%;
     }
   }
 }
