/competition/yearへのリンクのURLを修正

--- a/template/main/competition/index.ejs
+++ b/template/main/competition/index.ejs
@@ -10,7 +10,7 @@
         <ul>
           <% for(var year of years){ %>
             <li>
-              <a href="year/<%= year %>"><%= year %>年度</a>
+              <a href="/competition/year/<%= year %>"><%= year %>年度</a>
             </li>
           <% } %>
         </ul>
