試合日程ページに結果ページへのリンクの貼り付け（結果が存在する試合のみ）

--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -155,4 +155,23 @@ p {
       width: 100%;
     }
   }
+
+  &__competition\/year {
+    .com_list {
+      .com {
+        &__date {
+
+        }
+        &__competition {
+
+        }
+        &__place {
+
+        }
+        &__link {
+          text-align: center;
+        }
+      }
+    }
+  }
 }
