--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -132,12 +132,15 @@ main {
     margin: 0 auto;
   }
   .big-link {
-    color: $linkBarColor__light;
-    background: $linkBarColor;
-    font-size: 1.5rem;
-    margin: 20px 0px;
-    padding: 0.5rem;
-    text-align: center;
+    text-decoration: none;
+    &>p {
+      color: $linkBarColor__light;
+      background: $linkBarColor;
+      font-size: 1.5rem;
+      margin: 20px 0px;
+      padding: 0.5rem;
+      text-align: center;
+    }
   }
   .title {
     font-size: 3rem;
