--- a/template/main/competition/competition.ejs
+++ b/template/main/competition/competition.ejs
@@ -3,10 +3,13 @@
 <?- include(baseDir+'/common/_header') -?>
 <main class="page__<?= page.id ?>">
   <div class="container">
-    <a href="#" class="big-link">
-      <p>活動紹介</p>
-    </a>
-    <img class="top-photo" title="<?= server.name ?>" alt="トップ画像" src="<?= lib ?>/img/top_photo.jpg" />
+    <h1 class="title"><?= page.title ?></h1>
+
+    <% if(results.length > 0){ %>
+      <section>
+        <%= results.length %>
+      </section>
+    <% } %>
   </div>
 </main>
 <?- include(baseDir+'/common/_footer') -?>
