ページのナビゲーションの共通化

--- a/template/main/common/_footer.ejs
+++ b/template/main/common/_footer.ejs
@@ -1,17 +1,6 @@
 <footer>
   <div class="container">
-    <div class="nav">
-      <ul>
-        <li><a href="/#">部員紹介</a></li>
-        <li><a href="/#">カレンダー</a></li>
-        <li><a href="/competition">試合日程／結果</a></li>
-        <li><a href="/#">写真</a></li>
-        <li><a href="/#">歴代記録</a></li>
-        <li><a href="/#">部員掲示板</a></li>
-        <li><a href="/#">リンク</a></li>
-        <li><a href="/#">連絡先／利用規約</a></li>
-      </ul>
-    </div>
+    <?- include(baseDir+'/common/_nav') _?>
 
     <div class="copyright">
       <p>©2018 <?= server.name ?></p>
