--- a/template/main/index.ejs
+++ b/template/main/index.ejs
@@ -3,6 +3,8 @@
 <?- include(baseDir+'/common/_header') -?>
 <main class="page__<?= page.id ?>">
   <div class="container">
+    <?- include(baseDir+'/common/_nav') _?>
+    
     <a href="#" class="big-link">
       <p>活動紹介</p>
     </a>
