--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -23,9 +23,15 @@ body {
   color: $fontColor;
   background: $backColor;
   margin: 0;
+
+  @media screen and (max-width: 1099px){
+    grid-template-columns: auto;
+    grid-template-rows: auto 1fr auto;
+  }
 }
 
 header, footer {
+  overflow: hidden;
   a {
     color: inherit;
     text-decoration: none;
@@ -36,6 +42,7 @@ header {
   position: fixed;
   grid-column: 1 / 2;
   grid-row: 1 / -1;
+  height: 100%;
   color: $fontColor__light;
   z-index: 10;
   &::before {
@@ -50,8 +57,22 @@ header {
     transform-origin: right top;
     z-index: -1;
   }
+
+  @media screen and (max-width: 1099px){
+    position: relative;
+    grid-column: 1;
+    grid-row: 1 / 2;
+    padding-bottom: 0.5rem;
+    &::before {
+      content: none;
+    }
+  }
+
   &>.container {
     width: $headerWidth;
+    @media screen and (max-width: 1099px){
+      width: 100%;
+    }
   }
   .site-name {
     line-height: 3.3rem;
@@ -59,6 +80,25 @@ header {
     &>a {
       &:hover {
         text-decoration: underline;
+      }
+    }
+    @media screen and (max-width: 1099px){
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 120%;
+        height: 100%;
+        background: $mainColor;
+        transform: rotate(-5deg);
+        transform-origin: left bottom;
+        z-index: -1;
+      }
+    }
+    @media screen and (min-width: 451px) and (max-width: 1099px){
+      &::before {
+        transform: rotate(-2deg);
       }
     }
   }
@@ -70,6 +110,10 @@ header {
         margin: 7px 0;
         padding: 5px 0;
       }
+    }
+
+    @media screen and (max-width: 1099px){
+      display: none;
     }
   }
 }
@@ -95,8 +139,15 @@ footer {
     transform-origin: left top;
     z-index: -1;
   }
+
+  @media screen and (max-width: 1099px){
+    grid-column: 1;
+    grid-row: -2 / -1;
+    padding-left: 0;
+  }
+
   &>.container {
-    width: 100%;
+    // width: 100%;
     max-width: none;
     padding: 0 100px;
   }
@@ -104,6 +155,9 @@ footer {
     margin-left: -450px;
     font-size: 0.8rem;
     text-align: center;
+    @media screen and (max-width: 1099px){
+      margin-left: 0;
+    }
   }
 }
 
@@ -111,6 +165,13 @@ main {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   padding: 0 10px;
+  margin-bottom: 30px;
+
+  @media screen and (max-width: 1099px){
+    grid-column: 1;
+    grid-row: 2 / -2;
+    margin-top: 30px;
+  }
 
   h1 {
     color: $mainColor;
@@ -195,57 +256,5 @@ p {
 }
 
 .page {
-  &__index {
-    * {
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-    .top-photo {
-      width: 100%;
-    }
-  }
-
-  &__competition {
-    ul {
-      &>li {
-        padding-top: 0.3em;
-        padding-bottom: 0.3em;
-      }
-    }
-  }
-
-  &__competition\/year {
-    .com_list {
-      .com {
-        &__date {
-
-        }
-        &__competition {
-
-        }
-        &__place {
-
-        }
-        &__link {
-          text-align: center;
-        }
-      }
-    }
-  }
-
-  &__competition\/competition {
-    .sec_result {
-      margin-top: 2rem;
-      padding-left: 1rem;
-    }
-    .result__event {
-      margin-top: 0;
-      margin-bottom: 0.5em;
-      margin-left: -1rem;
-    }
-    .result__round {
-      margin-top: 0.5em;
-      margin-bottom: 0.3em;
-    }
-  }
+  @import '_page';
 }
