--- a/template/main/common/_header.ejs
+++ b/template/main/common/_header.ejs
@@ -3,17 +3,6 @@
     <h1 class="site-name">
       <a href="/"><?= server.name ?></a>
     </h1>
-    <div class="nav">
-      <ul>
-        <li><a href="/#">部員紹介</a></li>
-        <li><a href="/#">カレンダー</a></li>
-        <li><a href="/competition">試合日程／結果</a></li>
-        <li><a href="/#">写真</a></li>
-        <li><a href="/#">歴代記録</a></li>
-        <li><a href="/#">部員掲示板</a></li>
-        <li><a href="/#">リンク</a></li>
-        <li><a href="/#">連絡先／利用規約</a></li>
-      </ul>
-    </div>
+    <?- include(baseDir+'/common/_nav') _?>
   </div>
 </header>
