SNS用の記述を<head>に追加

--- a/template/main/common/_head.ejs
+++ b/template/main/common/_head.ejs
@@ -8,6 +8,14 @@
     <? }else{ ?>
       <title><?= page.title ?> | <?= server.name ?></title>
     <? } ?>
+    <meta property="og:site_name" content="サイト名" />
+    <meta property="og:title" content="ページ名" />
+    <meta property="og:description" content="ページの説明" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="サイトのトップURL" />
+    <meta property="og:image" content="Cardsで使用する画像のURL" />
+
+    <meta name="twitter:card" content="summary" />
 
     <link rel="stylesheet" type="text/css" href="<?= lib ?>/css/style.css" />
   </head>
