部員詳細ページに学部情報の追加

--- a/template/main/member/member.ejs
+++ b/template/main/member/member.ejs
@@ -47,6 +47,10 @@ _%>
               <td class="prof__expert"><%= member.expert %></td>
             </tr>
             <tr>
+              <th>学部</th>
+              <td class="prof__depart"><%= member.depart %></td>
+            </tr>
+            <tr>
               <th>出身校</th>
               <td class="prof__graduate"><%= member.graduate %></td>
             </tr>
