部員一覧のページ上部に、 学年ごとのh3タグにジャンプするリンクの設置

--- a/lib/css/page/_member.scss
+++ b/lib/css/page/_member.scss
@@ -2,7 +2,7 @@
   a {
     text-decoration: none;
   }
-  ul {
+  .member_list {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
