・試合日程、試合結果ページのトップ部分の表示内容変更 ・HD,FullHSの表示領域,文字サイズの変更

--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -9,13 +9,14 @@ $fontColor__light: $backColor;
 $fontColor__light2: rgba(39, 53, 74, 0.7);
 
 $headerWidth: 350px;
+$bodyWidth: 900px;
 
 html {
   height: 100%;
   font-size: 18px;
   background: $backColor;
 
-  @media screen and (max-width: 750px) {
+  @media screen and (max-width: 1280px) {
     font-size: 16px;
   }
 
@@ -33,7 +34,7 @@ body {
   background: $backColor;
   margin: 0;
 
-  @media screen and (max-width: 1099px){
+  @media screen and (max-width: 1099px) {
     grid-template-columns: auto;
     grid-template-rows: auto 1fr auto;
   }
@@ -42,7 +43,7 @@ body {
 header, footer {
   overflow: hidden;
 
-  @media screen and (min-width: 1201px){
+  @media screen and (min-width: 1201px) {
     font-size: 18px;
   }
 
@@ -72,7 +73,7 @@ header {
     z-index: -1;
   }
 
-  @media screen and (max-width: 1099px){
+  @media screen and (max-width: 1099px) {
     position: relative;
     grid-column: 1;
     grid-row: 1 / 2;
@@ -84,7 +85,7 @@ header {
 
   &>.container {
     width: $headerWidth;
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1099px) {
       width: 100%;
     }
   }
@@ -96,7 +97,7 @@ header {
         text-decoration: underline;
       }
     }
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1099px) {
       &::before {
         content: "";
         position: absolute;
@@ -110,7 +111,7 @@ header {
         z-index: -1;
       }
     }
-    @media screen and (min-width: 451px) and (max-width: 1099px){
+    @media screen and (min-width: 451px) and (max-width: 1099px) {
       &::before {
         transform: rotate(-2deg);
       }
@@ -126,7 +127,7 @@ header {
       }
     }
 
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1099px) {
       display: none;
     }
   }
@@ -154,7 +155,7 @@ footer {
     z-index: -1;
   }
 
-  @media screen and (max-width: 1099px){
+  @media screen and (max-width: 1099px) {
     grid-column: 1;
     grid-row: -2 / -1;
     padding-left: 0;
@@ -164,12 +165,12 @@ footer {
     // width: 100%;
     max-width: none;
     padding: 0 100px;
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1099px) {
       padding: 0;
     }
   }
   .nav {
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1280px) {
       width: auto;
       max-width: 750px;
       margin: 0 auto;
@@ -179,7 +180,7 @@ footer {
     margin-left: -450px;
     font-size: 0.8rem;
     text-align: center;
-    @media screen and (max-width: 1099px){
+    @media screen and (max-width: 1099px) {
       margin-left: 0;
     }
   }
@@ -191,7 +192,7 @@ main {
   padding: 0 10px;
   margin-bottom: 30px;
 
-  @media screen and (max-width: 1099px){
+  @media screen and (max-width: 1099px) {
     grid-column: 1;
     grid-row: 2 / -2;
     margin-top: 30px;
@@ -242,8 +243,11 @@ main {
 
   .container {
     width: auto;
-    max-width: 750px;
+    max-width: $bodyWidth;
     margin: 0 auto;
+    @media screen and (max-width: 1280px) {
+      max-width: 750px;
+    }
   }
   .big-link {
     text-decoration: none;
@@ -278,7 +282,7 @@ a {
 .view_sp {
   display: none;
 
-  @media screen and (max-width: 1099px){
+  @media screen and (max-width: 1099px) {
     display: block;
   }
 }
