--- a/template/main/competition/year.ejs
+++ b/template/main/competition/year.ejs
@@ -3,7 +3,7 @@
 <?- include(baseDir+'/common/_header') -?>
 <main class="page__<?= page.id ?>">
   <div class="container">
-    <h1 class="title"><?= page.title ?></h1>
+    <h1 class="title"><%= param.year_id %>年度<?= page.title ?></h1>
 
     <section>
       <% if(coms.length > 0){ %>
